--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1725,107 +1725,107 @@ stories:
   domain: http://www.gtrnews.com/union.htm
   link: https://gtrnews.com/wealaka-chapter-celebrates-10th-year/
 images:
-- name: los-angeles-from-observatory-losangeles-from-observatory-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-alien-goggles.jpg
-- name: old-house-oldhouse-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dry-skin.jpg
-- name: udnie-DSC_0079.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0079.jpg
-- name: server-cloud-server-racks-clouds-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-wols.jpg
-- name: stalin-time-seattle-waterfront-ferris-wheel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-seattle-waterfront-ferris-wheel.jpg
-- name: machine-road-machine-road-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-colorful-dream.jpg
-- name: store-on-corner-oldcabin-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-yellow-collage.jpg
-- name: powerlines-power-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-deep-connections.jpg
-- name: flower-barbed-wire-flower-barbed-wire-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-purp-paper.jpg
-- name: gypsy-wagon-gypsywagon-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-aqua.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-soul.jpg
-- name: crow_light_dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_light_dali.jpg
-- name: berlinwall-DSC-0084-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-graham-sutherland.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-yellow-paper.jpg
-- name: aws-s3-stories-catacombs-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-catacombs-copper-circuit-2.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-hot-spicy.jpg
-- name: white-house-lawn-white-house-lawn-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-colored-circuits.jpg
-- name: mosaic-face-mosaic-face-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purple-storm.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
-- name: gypsymosaic-gypsy-eyes-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-blue-circuit.jpg
-- name: oldbarn-oldbarn-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-atari-asteroids.jpg
-- name: catacombs-catacombs-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-kand-two.jpg
-- name: border-fence-border-fence-on-hill-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-yellow-collage.jpg
-- name: san-francisco-street-view-san-francisco-street-view-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-copper-circuit.jpg
-- name: legal-statue-legalstatue-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-smooth-ride.jpg
-- name: miamibeach-miamibeach-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crabapple.jpg
-- name: copper-circuit-sailboat-in-front-of-housing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-sailboat-in-front-of-housing.jpg
-- name: stories-new-42-16-600-500-0-max-1-1-2-0.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-42-16-600-500-0-max-1-1-2-0.jpg
-- name: oldbarn-oldbarn-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-colorful-dream.jpg
-- name: mosaic-face-mosaic-face-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crafty-painting.jpg
-- name: curtain-curtain-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dry-skin.jpg
-- name: wreck-IMG_6968.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_6968.jpg
-- name: border-crossing-bordercrossing-crabapple.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-crabapple.png
-- name: aws-s3-mountainlake-mountainlake-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still-1200.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-feed-people.jpg
-- name: hollywood-building-hollywood-building-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-jap-wav-pr.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-monet-one.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-monet-one.JPG
-- name: border-fence-border-fence-on-hill-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-constitution.jpg
-- name: server-cloud-server-racks-clouds-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-yellow-collage.jpg
-- name: aws-s3-stories-new-dragon-shadows-black-white-outline.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-dragon-shadows-black-white-outline.jpg
-- name: powerlines-power-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-purp-paper.jpg
-- name: store-on-corner-store-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-ww2-dresden.jpg
-- name: gears-4882162452-fa3126b38d-b-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dali-three.jpg
-- name: castle-wall-DSC-0067-umberto-bocc.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-umberto-bocc.JPG
-- name: machine-road-machine-road-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-smoking-cigarette.jpg
-- name: mediterranean-mediterranean-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-creativity.jpg
-- name: downtown-los-angeles-downtown-la-cinnamon-rolls.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-cinnamon-rolls.JPG
+- name: oldcabin-oldcabin-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-diego-rivera1.jpg
+- name: bf-skinner-docks-in-itealy-tower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-docks-in-itealy-tower.jpg
+- name: copper-circuit-thinking-man-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-thinking-man-statue.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-mucha-mult.jpg
+- name: berlinwall2-berlinwall-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-light-dali.jpg
+- name: rain-princess-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7162.jpg
+- name: art-museum-art-museum-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-emily-carr.jpg
+- name: beach-rocks-beach-rocks-currents-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dali-three.jpg
+- name: containership-containership-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-satan-red.jpg
+- name: eduardo-eduardo-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-oily-mcoilface.jpg
+- name: containership-containership-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit.jpg
+- name: border-crossing-bordercrossing-constitution.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-constitution.png
+- name: art-museum-art-museum-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crunch-paper.jpg
+- name: nyc-flag-nycflag-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-satan-red.jpg
+- name: berlinwall-DSC-0084-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-atari-asteroids.jpg
+- name: supreme-court-supremecourt-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crunch-paper.jpg
+- name: oldhotel-oldhotel-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-graham-sutherland.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
+- name: aws-s3-stories-green-gears-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-green-gears-matrix.jpg
+- name: nazi-invasion-cross-against-trees.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-cross-against-trees.jpg
+- name: server-cloud-server-racks-clouds-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-graham-sutherland.jpg
+- name: old-granary-field-oldhouse-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-yellow-paper.jpg
+- name: powerlines-power-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-plentiful.jpg
+- name: copper-circuit-girl-reading-bench-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-girl-reading-bench-garden.jpg
+- name: christianity-christianity-under-construction-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-spagetti-accident.jpg
+- name: stalin-time-working-on-railroad-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-working-on-railroad-1.jpg
+- name: server-cloud-server-racks-clouds-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-three.jpg
+- name: stalin-time-high-speed-train-station-france.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-high-speed-train-station-france.jpg
+- name: oldtrain-oldtrain-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-feed-people.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sunday.jpg
+- name: rockingchair-rockingchair-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dali-two.jpg
+- name: cargo-ship-cargo-ship-on-sea-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-wav-pr.jpg
+- name: server-cloud-server-racks-clouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-clean-view.jpg
+- name: wind-mills-windmills-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colorful-blocks.jpg
+- name: old-granary-field-granaryfield-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-rainbow-festival.jpg
+- name: hollywood-building-hollywood-building-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dry-skin.jpg
+- name: curtain-curtain-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-diego-rivera1.jpg
 - name: old-church-oldchurch-atari-missle.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-missle.jpg
-- name: fence-fence-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-hot-spicy.jpg
-- name: oldbarn-oldbarn-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-purple-storm.jpg
-- name: liberty-back-statue-liberty-back-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colorful-dream.jpg
+- name: crow-crow-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-ww2-dresden.jpg
+- name: la-muse-grain-ship-docking-grass.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-grain-ship-docking-grass.jpg
+- name: old-school-house-old-schoolhouse-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-colorful-dream.jpg
+- name: rockingchair-rockingchair-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-pablo-blue.jpg
+- name: bf-skinner-old-building-barcelona-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-building-barcelona-waterfront.jpg
+- name: stories-christianity-under-construction-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-atari-asteroids.jpg
+- name: cargo-ship-cargo-ship-on-sea-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-kandinsky-bv.jpg
+- name: death-valley-death-valley-national-park-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-yellow-collage.jpg
+- name: subway-subway-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dry-skin.jpg
+- name: nazi-invasion-old-building-and-cars_36680898846_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-and-cars_36680898846_o.jpg
+- name: crow-crow-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-atari-asteroids.jpg
+- name: stories-schoolhouse-clouds-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-schoolhouse-clouds-dark-dali.jpg
+- name: old-door-lock-old-door-lock-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-cinnamon-rolls.jpg
 ---
 Police Release Identity Of Man Killed In Hampton Roads Center Parkway Crash.&nbsp;County Considers Gun Control.&nbsp;Cher Proved She Has Nothing To Prove On Thursday Night In Dallas.&nbsp;Wildcats Make Their Choices On National Signing Day.&nbsp;Federal Civil, Criminal Collections Increase.&nbsp;City Attorney Who'd Been Under Suspension Has Resigned.&nbsp;Democrats Test Whether Voters Will Shrug Off Impeachment.&nbsp;Voters Have New Leeway On Sales Tax In Granite Shoals.&nbsp;
