--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1725,107 +1725,107 @@ stories:
   domain: http://www.gtrnews.com/union.htm
   link: https://gtrnews.com/wealaka-chapter-celebrates-10th-year/
 images:
-- name: oldcabin-oldcabin-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-diego-rivera1.jpg
-- name: bf-skinner-docks-in-itealy-tower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-docks-in-itealy-tower.jpg
-- name: copper-circuit-thinking-man-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-thinking-man-statue.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-mucha-mult.jpg
-- name: berlinwall2-berlinwall-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-light-dali.jpg
-- name: rain-princess-IMG_7162.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7162.jpg
-- name: art-museum-art-museum-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-emily-carr.jpg
-- name: beach-rocks-beach-rocks-currents-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dali-three.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-matrix.jpg
+- name: machine-road-machine-road-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-jap-dys-1.jpg
+- name: downtheline-downtheline-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-ww2-color.jpg
+- name: curtain-curtain-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-constitution.jpg
+- name: beach-rocks-beach-rocks-currents-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-crafty-painting.jpg
+- name: oldsmallboat-oldsmallboat-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-diego-rivera1.jpg
+- name: braceros-domingo-ulloa-people-eating-canal.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-people-eating-canal.jpg
+- name: amusement-park-amusement-park-2-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-light-dali.jpg
+- name: adam-smith-adam-smith-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-feed-people.jpg
+- name: lincoln-memorial-lincolnmemorial-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-alberto-giacometti.jpg
+- name: oldhousecars-house-old-cars-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-ww2-color.jpg
+- name: stories-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-diego-rivera1.jpg
+- name: nazi-invasion-dragon-desert-looking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dragon-desert-looking.jpg
+- name: walled-garden-walled-garden-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-brush.jpg
+- name: dragon-desert-desert-dragon-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-electricity.jpg
+- name: mediterranean-mediterranean-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-granite.jpg
+- name: berlinwall-DSC-0084-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-emily-carr.jpg
+- name: oldhouse-oldhouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-aqua.jpg
+- name: oldhouse-oldhouse-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-feed-people.jpg
+- name: containership-containership-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-feed-people.jpg
+- name: rockingchair-rockingchair-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-circuit.jpg
+- name: old-granary-field-granaryfield-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-purple-storm.jpg
+- name: machine-road-machine-road-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-horiz-circuit.jpg
+- name: crow_purple_storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purple_storm.jpg
+- name: nazi-invasion-old-building-barcelona-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-barcelona-waterfront.jpg
+- name: meadowbutterfly-meadow-butterfly-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-purple-pond.jpg
+- name: dc-statue-dcstatue-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crunch-paper.jpg
+- name: liberty-back-statue-liberty-back-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-spagetti-accident.jpg
+- name: sand-hand-sand-hand-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-electricity.jpg
 - name: containership-containership-satan-red.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-satan-red.jpg
-- name: eduardo-eduardo-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-oily-mcoilface.jpg
-- name: containership-containership-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit.jpg
-- name: border-crossing-bordercrossing-constitution.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-constitution.png
-- name: art-museum-art-museum-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crunch-paper.jpg
-- name: nyc-flag-nycflag-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-satan-red.jpg
-- name: berlinwall-DSC-0084-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-atari-asteroids.jpg
-- name: supreme-court-supremecourt-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crunch-paper.jpg
-- name: oldhotel-oldhotel-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-graham-sutherland.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
-- name: aws-s3-stories-green-gears-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-green-gears-matrix.jpg
-- name: nazi-invasion-cross-against-trees.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-cross-against-trees.jpg
-- name: server-cloud-server-racks-clouds-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-graham-sutherland.jpg
-- name: old-granary-field-oldhouse-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-yellow-paper.jpg
-- name: powerlines-power-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-plentiful.jpg
-- name: copper-circuit-girl-reading-bench-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-girl-reading-bench-garden.jpg
-- name: christianity-christianity-under-construction-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-spagetti-accident.jpg
-- name: stalin-time-working-on-railroad-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-working-on-railroad-1.jpg
-- name: server-cloud-server-racks-clouds-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-three.jpg
-- name: stalin-time-high-speed-train-station-france.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-high-speed-train-station-france.jpg
-- name: oldtrain-oldtrain-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-feed-people.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sunday.jpg
-- name: rockingchair-rockingchair-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dali-two.jpg
-- name: cargo-ship-cargo-ship-on-sea-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-wav-pr.jpg
-- name: server-cloud-server-racks-clouds-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-clean-view.jpg
-- name: wind-mills-windmills-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colorful-blocks.jpg
-- name: old-granary-field-granaryfield-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-rainbow-festival.jpg
-- name: hollywood-building-hollywood-building-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dry-skin.jpg
-- name: curtain-curtain-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-diego-rivera1.jpg
-- name: old-church-oldchurch-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-missle.jpg
-- name: crow-crow-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-ww2-dresden.jpg
-- name: la-muse-grain-ship-docking-grass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-grain-ship-docking-grass.jpg
-- name: old-school-house-old-schoolhouse-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-colorful-dream.jpg
-- name: rockingchair-rockingchair-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-pablo-blue.jpg
-- name: bf-skinner-old-building-barcelona-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-building-barcelona-waterfront.jpg
-- name: stories-christianity-under-construction-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-atari-asteroids.jpg
-- name: cargo-ship-cargo-ship-on-sea-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-kandinsky-bv.jpg
-- name: death-valley-death-valley-national-park-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-yellow-collage.jpg
-- name: subway-subway-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dry-skin.jpg
-- name: nazi-invasion-old-building-and-cars_36680898846_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-and-cars_36680898846_o.jpg
-- name: crow-crow-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-atari-asteroids.jpg
-- name: stories-schoolhouse-clouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-schoolhouse-clouds-dark-dali.jpg
-- name: old-door-lock-old-door-lock-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-cinnamon-rolls.jpg
+- name: oldcabin-store-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-kand-two.jpg
+- name: rockingchair-face-2-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-clean-view.jpg
+- name: trucksilo-trucksilo-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-brush.jpg
+- name: flower-barbed-wire-flower-barbed-wire-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-oily-mcoilface.jpg
+- name: castle-wall-DSC-0067-diego-rivera1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-diego-rivera1.JPG
+- name: razorcliff-razorcliff-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dali-two.jpg
+- name: school-clouds-church-clouds-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-yellow-paper.jpg
+- name: capital-battle-capitolbattle-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-alien-goggles.jpg
+- name: nazi-invasion-IMG_8486.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8486.jpg
+- name: gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
+- name: birdhouse-birdhouse-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-spagetti-accident.jpg
+- name: copper-circuit-city-waterfront-path.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-waterfront-path.jpg
+- name: oldroad-old-road-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-deep-connections.jpg
+- name: border-fence-border-fence-on-hill-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-purp-paper.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-clean-view.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-clean-view.JPG
+- name: abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
+- name: blossombar-oily-mcoilface-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-oily-mcoilface-file-00-00-50-62.jpg
+- name: store-on-corner-store-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-sand-paper.jpg
+- name: blossombar-crafty-painting-file-00-00-50-48.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-48.jpg
+- name: nazi-invasion-train-subway-125th-down-the-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-subway-125th-down-the-line.jpg
+- name: walled-garden-walled-garden-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dali-two.jpg
 ---
 Police Release Identity Of Man Killed In Hampton Roads Center Parkway Crash.&nbsp;County Considers Gun Control.&nbsp;Cher Proved She Has Nothing To Prove On Thursday Night In Dallas.&nbsp;Wildcats Make Their Choices On National Signing Day.&nbsp;Federal Civil, Criminal Collections Increase.&nbsp;City Attorney Who'd Been Under Suspension Has Resigned.&nbsp;Democrats Test Whether Voters Will Shrug Off Impeachment.&nbsp;Voters Have New Leeway On Sales Tax In Granite Shoals.&nbsp;
